# project_TC-Windows-client-x64

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  FEATURES-README.md  IMPLEMENTATION-SUMMARY.md  LICENSE  README-ARCHITECTURE.md  README.md  TPM_IMPLEMENTATION.md  build_check.sh
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  games.yml  sync-to-gitee-gitlab.yml
Project1/: Project1.qtvscr  Project1.sln  Project1.slnLaunch  Project1.vcxproj  Project1.vcxproj.filters
Project1/enc_temp_folder/2611f4ade921f98f9ac144fb4fae67c1/: LibreHardwareMonitorBridge.cpp
Project1/src/: main.cpp
Project1/src/B_UI/: ConsoleUI.cpp  ConsoleUI.h
Project1/src/core/DataStruct/: DataStruct.h
Project1/src/core/Utils/: ComInitializationHelper.cpp  ComInitializationHelper.h
Project1/x64/Debug/Project1.tlog/: Project1.lastbuildstate
Qt-Widgets-TC-monitor/: Qt-Widgets-TC-monitor.vcxproj  Qt-Widgets-TC-monitor.vcxproj.filters  QtWidgetsTCmonitor.cpp  QtWidgetsTCmonitor.h  QtWidgetsTCmonitor.pro  QtWidgetsTCmonitor.qrc  QtWidgetsTCmonitor.ui  Screen01.ui.qml  SmartDetailsDialog.cpp  SmartDetailsDialog.h  main.cpp  resources.qrc  stdafx.h  test.qml  test.qrc  ui_QtWidgetsTCmonitor.h
Qt-Widgets-TC-monitor/Project1-qml/: Project1.qmlproject  Project1.qmlproject.qtds.204d9c5
Qt-Widgets-TC-monitor/Project1-qml/Project1/: Constants.qml  qmldir
Qt-Widgets-TC-monitor/Project1-qml/Project1/designer/: plugin.metainfo
Qt-Widgets-TC-monitor/Project1-qml/Project1Content/: App.qml  Screen01.ui.qml
WPF-UI1/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WPF-UI1.csproj  app.config
WPF-UI1/Converters/: ValueConverters.cs
WPF-UI1/GPU/: GPUManager.cs  IGPUProvider.cs
WPF-UI1/Models/: SystemInfo.cs
WPF-UI1/Plugins/: IPlugin.cs  PluginManager.cs
WPF-UI1/Plugins/Examples/: ExamplePlugins.cs
WPF-UI1/Properties/: Settings.Designer.cs  Settings.settings
WPF-UI1/Resources/Localization/: Strings.en-US.resx  Strings.resx
WPF-UI1/Services/: CrashDumpService.cs  GlobalHotkeyService.cs  LocalizationService.cs  SharedMemoryService.cs  SystemTrayService.cs
WPF-UI1/ViewModels/: MainWindowViewModel.cs
src/: Application.cpp  Application.h  BackgroundMonitor.h  main.cpp  main_simple.cpp  main_ui.cpp
src/B_UI/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h
src/CPP-parsers/CPP-parsers/: pch.h
src/core/DataStruct/: DataStruct.h  Producer.cpp  SharedMemoryManager.cpp  SharedMemoryManager.h
src/core/Utils/: ComInitializationHelper.cpp  LibreHardwareMonitorBridge.cpp  LibreHardwareMonitorBridge.h  Logger.cpp  Logger.h  PlatformUtils.cpp  PlatformUtils.h  TimeUtils.cpp  TimeUtils.h  WMIManager.cpp  WMIManager.h  WinUtils.cpp  WinUtils.h  stdafx.h
src/core/application/: Application.cpp  Application.h
src/core/cpu/: CpuInfo.cpp  CpuInfo.h  CpuInfo_CrossPlatform.cpp
src/core/devtools/: DiagnosticTools.cpp  DiagnosticTools.h
src/core/disk/: DiskInfo.cpp  DiskInfo.h
src/core/gpu/: GPUAbstraction.h  GpuInfo.cpp  GpuInfo.h
src/core/memory/: MemoryInfo.cpp  MemoryInfo.h
src/core/memory/gpu/: GpuInfo.cpp
src/core/network/: NetworkAdapter.cpp  NetworkAdapter.h
src/core/os/: OSInfo.cpp  OSInfo.h
src/core/platform/: Platform.h
src/core/temperature/: LibreHardwareMonitorBridge.cpp  LibreHardwareMonitorBridge.h  TemperatureWrapper.cpp  TemperatureWrapper.h
src/core/tpm/: README.md  TpmInfo.cpp  TpmInfo.h
src/core/ui/: QtDisplayBridge.cpp  QtDisplayBridge.h
src/gpu/: GPUAbstraction.cpp  GPUAbstraction.h
src/plugins/: PluginManager.h
src/services/: ServiceInterfaces.h  ServiceManager.cpp  ServiceManager.h
